ITER_4
J'ai rajouté le test avec le nom en minuscule et aussi si le nom est null